# Mini7Xiangqi-GitHub-Trainer

./: .gitattributes  .gitignore  CMakeLists.txt  ENGINE_SOURCE_NOTICE.md  INSTALL_NATIVE_NNUE.txt  MODEL_FORMAT.md  README.md  SHA256SUMS.txt  TEST_REPORT.md  THIRD_PARTY_NOTICES.md  commit_native_pipeline.cmd
.github/workflows/: generate-native-data.yml  native-engine-ci.yml  release-native-engine.yml  train-6h.yml  train-native-nnue-cpu.yml  verify.yml
config/: README.md  variants.ini
engine/: README.md
models/: mini7-current.m7nnue
native/: FILE_MANIFEST.txt  README.zh-CN.md  SOURCE_PROVENANCE.md  TEST_REPORT.md
native/engine/src/: parser.cpp  position.cpp  position.h  variant.cpp  variant.h  variants.ini
native/scripts/: patch_tools_engine.py  patch_trainer_cpu.py  patch_trainer_timer.py  smoke_native_engine.py  timed_selfplay.sh  verify_nnue_load.py
scripts/: verify-engine.ps1
src/: mini7net.cpp  mini7net.h  rules.cpp  rules.h  trainer_cli.cpp  uci_process.cpp  uci_process.h
state/: history.md  latest.json
tests/: mock_uci_engine.cpp  net_test.cpp  rules_test.cpp
